Fix search field border break/overlap

--- a/apps/block_scout_web/assets/css/components/_navbar.scss
+++ b/apps/block_scout_web/assets/css/components/_navbar.scss
@@ -20,6 +20,7 @@
     form {
       flex-grow: 1;
     }
+
   }
 
   .input-group {
@@ -79,9 +80,8 @@
   background: transparent;
   width: auto;
   font-size: 12px;
-  border-right: none;
+  border: none;
   color: $white;
-  border-color: transparentize($white, 0.30);
   padding-right: 0px;
 
 
@@ -109,8 +109,7 @@
 
 .navbar .input-group-text {
   background: none;
-  border-left: none;
-  border-color: transparentize($white, 0.30);
+  border: none;
 }
 
 .input-group-append {
@@ -159,4 +158,8 @@
     background-color: $tertiary;
     color: $white;
   }
+}
+
+.add-border {
+  border: 1px solid transparentize($white, 0.30);
 }
